# HybridBeam

./: README.md  beamform_mic_array  beamformer.py  deepbeam.py  download_dataset.sh  train.py  util.py
beamformer/: CMakeLists.txt  README.md  atomicops.h  beamform.h  beamforming_mic_array.h  bpf.cpp  bpf.h  main.cpp  mic_array.cpp  mic_array.h  offline.cpp  readerwriterqueue.h  webrtc_beamform.cpp
